[tool.poetry]
name = "emoji"
version = "0.1.0"
description = ""
authors = ["inni-iii <inhee7071@nate.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.0"
torch = "^2.0.0"
transformers = "^4.27.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
